k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tritondft-svc
  namespace: datahub-llm
  labels:
    k8s-app: tritondft
spec:
  type: ClusterIP
  selector:
    k8s-app: tritondft
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8000
